Hot fixes on weird nav bar, going behind logo

--- a/Semesterprojekt/css/styles.css
+++ b/Semesterprojekt/css/styles.css
@@ -1,7 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-#loginModel_Username {
-    background-color:red;
+.navbar-button {
+    font-family: Noto Sans,sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #000;
+    width: 100%;
+    border: 0;
+    padding: 7.5px 15px;
+    color: #fff;
+    font-size: 14px;
+    font-weight:600;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
 }
 .form-wrapper {
     display:flex;
