--- a/Semesterprojekt/css/umbraco-starterkit-style.css
+++ b/Semesterprojekt/css/umbraco-starterkit-style.css
@@ -1343,7 +1343,7 @@ body.theme-font-mono {
         position: absolute;
         left: 50%;
         top: 50%;
-        transform: translate(-50%,-50%)
+        transform: translate(-20%,-45%);
     }
 
     .header--fixed .nav-link {
@@ -1406,6 +1406,7 @@ footer {
     align-items: center;
     -ms-flex-direction: row;
     flex-direction: row
+
 }
 
 .nav-bar--list {
